--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+		<link rel="stylesheet" href="css/styles.css">
+    <title>Homework 10</title>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+		
+		<div class="form-box">
+			<form class="search-form" id="search-form">
+				<div class="search-box">
+					<input
+						class="search-input"
+						type="text"
+						name="searchQuery"
+						autocomplete="off"
+						placeholder="Search images..."
+					/>
+					<button class="search-button" type="submit">🔍︎</button>
+				</div>
+			</form>
+		</div>
+
+		<div class="gallery"></div>
+
+		<div class="end-notification is-hidden">
+			<p>The end)</p>
+		</div>
+		<div class="scroll-guard"></div>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
